src/test/deca/codegen/valid/objet_nested_return.deca
class A {
    int x;

    int inc() { 
        x = x + 1; 
        return x; 
    }

    int loop(int n) {
        int i = 0;
        while (i < n) {
            if (this.inc() == 3) {
                return x;
            }
            i = i + 1;
        }
        return x;
    }
}

{
    A a = new A();
    println(a.loop(10));
}
