src/test/deca/codegen/invalid/stack_overflow.deca
class Infini {
    int f(int n) {
        return this.f(n + 1);
    }
}

{
    Infini a = new Infini();
    println(a.f(0));
}
